--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Store</title>
+    <title>Style Hub - Fashion Store</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -25,7 +25,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <h1>Welcome to the Fashion Store</h1>
+            <h1>Welcome to Style Hub</h1>
             <p>Discover the latest trends and styles</p>
             <button onclick="showAlert()">Shop Now</button>
         </section>
@@ -40,7 +40,7 @@
 
         <!-- Additional Content Section -->
         <section class="about">
-            <p>Fashioneer is an online platform dedicated to all styles of fashion for both men and women.</p>
+            <p>Style Hub is an online platform dedicated to all styles of fashion for both men and women.</p>
             <p>The platform gives you a chance to explore various fashion styles, including both classic and the latest trends.</p>
 
             <div class="image-gallery">
@@ -49,13 +49,13 @@
                 <img src="home/man2.jpg" alt="Men's Style 3" width="400" height="400">
             </div>
 
-            <p>Fashioneer is known for its unique luxurious fashion trends that catch everyone’s eye. The platform stands out for its engaging content and insights into high-end fashion and modern style.</p>
+            <p>Style Hub is known for its unique luxurious fashion trends that catch everyone’s eye. The platform stands out for its engaging content and insights into high-end fashion and modern style.</p>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Fashioneer. All rights reserved.</p>
+        <p>&copy; 2024 Style Hub. All rights reserved.</p>
     </footer>
 
 </body>
