--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
         <!-- About Section -->
         <section id="about" class="about">
+            <h2>About Style Hub</h2>
             <p>Style Hub is an online platform dedicated to all styles of fashion for both men and women.</p>
             <p>The platform gives you a chance to explore various fashion styles, including both classic and the latest trends.</p>
 
@@ -49,6 +50,48 @@
                 <img src="home/man1.jpg" alt="Men's Style 2">
                 <img src="home/man2.jpg" alt="Men's Style 3">
             </div>
+
+            <!-- Size Guide Table -->
+            <h3>Size Guide</h3>
+            <p>Find your perfect size with our easy-to-follow size guide:</p>
+            <table class="size-guide">
+                <thead>
+                    <tr>
+                        <th>Size</th>
+                        <th>Chest (in)</th>
+                        <th>Waist (in)</th>
+                        <th>Hip (in)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Small</td>
+                        <td>34 - 36</td>
+                        <td>28 - 30</td>
+                        <td>35 - 37</td>
+                    </tr>
+                    <tr>
+                        <td>Medium</td>
+                        <td>38 - 40</td>
+                        <td>32 - 34</td>
+                        <td>39 - 41</td>
+                    </tr>
+                    <tr>
+                        <td>Large</td>
+                        <td>42 - 44</td>
+                        <td>36 - 38</td>
+                        <td>43 - 45</td>
+                    </tr>
+                    <tr>
+                        <td>X-Large</td>
+                        <td>46 - 48</td>
+                        <td>40 - 42</td>
+                        <td>47 - 49</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>Our sizes are standard, but if you have any questions, feel free to contact us for guidance!</p>
         </section>
 
         <!-- Contact Section -->
