--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header Section -->
     <header>
-        <img src="home/logo2.jpg" alt="Fashion Store Logo" class="logo">
+        <img src="home/Stylelogo.png" alt="Fashion Store Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -124,7 +124,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Style Hub. All rights reserved.</p>
+        <p>&copy; 2024 Style Hub@GROUP-E. All rights reserved.</p>
     </footer>
 
 </body>
