--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <!-- Products Section -->
         <section id="products" class="products">
             <h2>Featured Products</h2>
-            <div class="product-list">
-                <?php include 'product.php'; ?>
-            </div>
+            <?php include 'product.php'; ?>
         </section>
 
         <!-- About Section -->
@@ -124,7 +122,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Style Hub@GROUP-E. All rights reserved.</p>
+        <p>&copy; 2024 Style Hub. All rights reserved.</p>
     </footer>
 
 </body>
