--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="home/Stylelogo.png" alt="Fashion Store Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -26,22 +26,24 @@
     <main>
         <!-- Hero Section -->
         <section id="home" class="hero">
-            <h1>Welcome to Style Hub</h1>
-            <p>Discover the latest trends and styles</p>
-            <button onclick="showAlert()">Shop Now</button>
+            <h1 style="color: var(--text-color-light);">Welcome to Style Hub</h1>
+            <p style="color: var(--text-color-medium);">Discover the latest trends and styles</p>
+            <button onclick="showAlert()" style="color: var(--background-color); background-color: var(--primary-color);">Shop Now</button>
         </section>
 
         <!-- Products Section -->
         <section id="products" class="products">
-            <h2>Featured Products</h2>
-            <?php include 'product.php'; ?>
+            <h2 style="color: var(--primary-color);">Featured Products</h2>
+            <div id="product-list">
+                <!-- Products will be loaded here dynamically from products.php -->
+            </div>
         </section>
 
         <!-- About Section -->
         <section id="about" class="about">
-            <h2>About Style Hub</h2>
-            <p>Style Hub is an online platform dedicated to all styles of fashion for both men and women.</p>
-            <p>The platform gives you a chance to explore various fashion styles, including both classic and the latest trends.</p>
+            <h2 style="color: var(--primary-color);">About Style Hub</h2>
+            <p style="color: var(--text-color-medium);">Style Hub is an online platform dedicated to all styles of fashion for both men and women.</p>
+            <p style="color: var(--text-color-medium);">Explore various fashion styles, from classic to the latest trends in modern fashion.</p>
 
             <div class="image-gallery">
                 <img src="home/man4.jpg" alt="Men's Style">
@@ -50,8 +52,8 @@
             </div>
 
             <!-- Size Guide Table -->
-            <h3>Size Guide</h3>
-            <p>Find your perfect size with our easy-to-follow size guide:</p>
+            <h3 style="color: var(--primary-color);">Size Guide</h3>
+            <p style="color: var(--text-color-medium);">Find your perfect size with our easy-to-follow size guide:</p>
             <table class="size-guide">
                 <thead>
                     <tr>
@@ -90,39 +92,39 @@
             </table>
 
             <!-- Buyer Information Form -->
-            <h3>Order Information</h3>
-            <p>Fill out your details below to inquire about a product:</p>
+            <h3 style="color: var(--primary-color);">Order Information</h3>
+            <p style="color: var(--text-color-medium);">Fill out your details below to inquire about a product:</p>
             <form id="buyer-form" class="buyer-form" action="submit_form.php" method="post">
-                <label for="name">Name:</label>
+                <label for="name" style="color: var(--text-color-light);">Name:</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="product">Product:</label>
+                <label for="product" style="color: var(--text-color-light);">Product:</label>
                 <input type="text" id="product" name="product" required>
 
-                <label for="size">Size:</label>
+                <label for="size" style="color: var(--text-color-light);">Size:</label>
                 <select id="size" name="size" required>
-                    <option value="">Select Size</option>
+                    <option value="" style="color: var(--text-color-dark);">Select Size</option>
                     <option value="Small">Small</option>
                     <option value="Medium">Medium</option>
                     <option value="Large">Large</option>
                     <option value="X-Large">X-Large</option>
                 </select>
 
-                <button type="submit">Submit</button>
+                <button type="submit" style="background-color: var(--primary-color); color: var(--background-color);">Submit</button>
             </form>
         </section>
 
         <!-- Contact Section -->
         <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p>Email us at <a href="mailto:info@stylehub.com">info@stylehub.com</a></p>
-            <p>Follow us on social media for more updates!</p>
+            <h2 style="color: var(--primary-color);">Contact Us</h2>
+            <p style="color: var(--text-color-medium);">Email us at <a href="mailto:info@stylehub.com" style="color: var(--primary-color);">info@stylehub.com</a></p>
+            <p style="color: var(--text-color-medium);">Follow us on social media for more updates!</p>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Style Hub. All rights reserved.</p>
+        <p style="color: var(--primary-color);">&copy; 2024 Style Hub. All rights reserved.</p>
     </footer>
 
 </body>
