--- a/index.html
+++ b/index.html
@@ -34,8 +34,26 @@
         <!-- Products Section -->
         <section id="products" class="products">
             <h2 style="color: var(--primary-color);">Featured Products</h2>
-            <div id="product-list">
-                <!-- Products will be loaded here dynamically from products.php -->
+            <div class="product-list">
+                <!-- Hardcoded Product Cards -->
+                <div class="product-card">
+                    <img src="home/man1.jpg" alt="Product 1">
+                    <h3 style="color: var(--primary-color);">Product 1</h3>
+                    <p class="price" style="color: var(--text-color-light);">UGX 180,000</p>
+                    <button style="background-color: var(--primary-color); color: var(--background-color);">Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="home/man2.jpg" alt="Product 2">
+                    <h3 style="color: var(--primary-color);">Product 2</h3>
+                    <p class="price" style="color: var(--text-color-light);">UGX 220,000</p>
+                    <button style="background-color: var(--primary-color); color: var(--background-color);">Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="home/product3.jpg" alt="Product 3">
+                    <h3 style="color: var(--primary-color);">Product 3</h3>
+                    <p class="price" style="color: var(--text-color-light);">UGX 250,000</p>
+                    <button style="background-color: var(--primary-color); color: var(--background-color);">Add to Cart</button>
+                </div>
             </div>
         </section>
 
@@ -117,14 +135,14 @@
         <!-- Contact Section -->
         <section id="contact" class="contact">
             <h2 style="color: var(--primary-color);">Contact Us</h2>
-            <p style="color: var(--text-color-medium);">Email us at <a href="mailto:info@stylehub.com" style="color: var(--primary-color);">info@stylehub.com</a></p>
+            <p style="color: var(--text-color-medium);">Email us at <a href="mailto:info@stylehub.com" style="color: var(--primary-color);">GROUP-E@stylehub.com</a></p>
             <p style="color: var(--text-color-medium);">Follow us on social media for more updates!</p>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p style="color: var(--primary-color);">&copy; 2024 Style Hub. All rights reserved.</p>
+        <p style="color: var(--primary-color);">&copy; 2024 Style Hub@GROUP-E. All rights reserved.</p>
     </footer>
 
 </body>
