--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header Section -->
     <header>
-        <img src="home/Stylelogo.png" alt="Fashion Store Logo" class="logo">
+        <img src="home/Stylelogo-2.png" alt="Fashion Store Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
