--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="productpage.php">Products</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
